Fixes assimp linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ set(CMAKE_CXX_STANDARD 14)
 
 find_path(libglm glm.h)
 find_path(stb stb)
-#find_path(assimp assimp)
 
 
 link_directories(
@@ -15,9 +14,14 @@ link_directories(
 find_library(libglfw glfw)
 find_library(libGLEW GLEW)
 find_library(OpenGLFramework OpenGL)
-find_library(assimp assimp)
 find_library(CocoaFramework Cocoa)
 find_library(IOKitFramework IOKit)
+
+find_package(assimp)
+find_library(
+        assimp_LIBRARIES
+        NAMES assimp
+)
 
 include_directories(
         ${libglm}
@@ -32,8 +36,8 @@ set(LINK_LIBRARIES
         ${libGLEW}
         ${OpenGLFramework}
         ${CocoaFramework} ${IOKitFramework}
+        ${assimp_LIBRARIES}
         "Core"
-        "/usr/local/lib/libassimp.dylib"
         )
 
 if(APPLE)
@@ -46,8 +50,12 @@ endif()
 
 file( GLOB CORE_SOURCES ${CMAKE_SOURCE_DIR} ./libs/core/*.cpp )
 
-
+message(${CMAKE_BINARY_DIR} ${RUNTIME_OUTPUT_DIRECTORY})
 add_library(Core STATIC ${CORE_SOURCES})
+
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/bin)
+set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/lib)
+
 
 file( GLOB APP_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} app/*.cpp )
 foreach( testsourcefile ${APP_SOURCES} )
